# Advance_homework3

HomeWork1/: Deleter.hpp  Maksim_Panibrat_HW1_Stack.hpp  Maksim_Panibrat_HW1_Vector.hpp  Maksim_Panibrat_HW1_main.cpp  Maksim_Panibrat_HW2_Deleters.hpp  Maksim_Panibrat_HW2_Shared_ptr.hpp  Maksim_Panibrat_HW2_Unique_ptr.hpp  Maksim_Panibrat_HW2_main.cpp  Maksim_Panibrat_HW7_Function_Caller.cpp  Maksim_Panibrat_HW7_Functions_List.h  Maksim_Panibrat_HW7_Functions_Realizations.cpp  Maksim_Panibrat_HW7_Guide.cpp  Maksim_Panibrat_HW7_Source.cpp  Maksim_Panibrat_HW7_Test_Function_Caller.cpp  Maksim_Panibrat_HW7_Test_Functions.cpp  Maksim_Panibrat_HW7_Test_Functions_List.h  Maksim_Panibrat_HW7_Test_Functions_Realizations.cpp  Maksim_Panibrat_HW7_test_functions.cpp  Maksim_Panibrat_HW7_test_functions.h  README.md  Stack.hpp  Unique_ptr.hpp  Vector.hpp  main.cpp  vector_realization_hw1(main).cpp  vector_realization_hw1(stack).hpp  vector_realization_hw1(vector).hpp
HomeWork1/Taras_Samchuk_HW1/: CMakeLists.txt  main.cpp  stack.hpp  stek.hpp  vector.hpp  vektor.hpp
HomeWork2/Taras_Samchuk_HW2/: CMakeLists.txt  main.cpp  shared_ptr.hpp  unique_ptr.hpp
